2019-10-17  Richard Biener  <rguenther@suse.de>

	PR debug/91887
	* g++.dg/debug/dwarf2/pr91887.C: New testcase.

2019-10-16  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/83821
	* c-c++-common/Warray-bounds-4.c: Remove XFAIL.
	* gcc.dg/strlenopt-82.c: New test.
	* gcc.dg/strlenopt-83.c: Same.
	* gcc.dg/strlenopt-84.c: Same.
	* gcc.dg/strlenopt-85.c: Same.
	* gcc.dg/strlenopt-86.c: Same.
	* gcc.dg/tree-ssa/calloc-4.c: Same.
	* gcc.dg/tree-ssa/calloc-5.c: Same.

2019-10-16  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/91996
	* gcc.dg/strlenopt-80.c: New test.
	* gcc.dg/strlenopt-81.c: New test.

2019-10-16  Mihailo Stojanovic  <mistojanovic@wavecomp.com>

	* gcc.target/mips/msa-dpadd-dpsub.c: New test.

2019-10-16  Wilco Dijkstra  <wdijkstr@arm.com>

	* gcc.target/aarch64/symbol-range.c: Improve testcase.
	* gcc.target/aarch64/symbol-range-tiny.c: Likewise.

2019-10-16  Richard Biener  <rguenther@suse.de>

	* gcc.dg/vect/vect-cond-reduc-3.c: New testcase.
	* gcc.dg/vect/vect-cond-reduc-4.c: Likewise.

2019-10-16  Peter Bergner <bergner@linux.ibm.com>
	    Jiufu Guo  <guojiufu@linux.ibm.com>

	PR target/70010
	* gcc.target/powerpc/pr70010.c: New test.
	* gcc.target/powerpc/pr70010-1.c: New test.
	* gcc.target/powerpc/pr70010-2.c: New test.
	* gcc.target/powerpc/pr70010-3.c: New test.
	* gcc.target/powerpc/pr70010-4.c: New test.

2019-10-16  Feng Xue  <fxue@os.amperecomputing.com>

	PR ipa/91088
	* gcc.dg/ipa/pr91088.c: New test.
	* gcc.dg/ipa/pr91089.c: Add sub-test for range analysis.
	* g++.dg/tree-ssa/ivopts-3.C: Force a function to be noinline.

2019-10-15  Andrew Pinski  <apinski@marvell.com>

	* gcc.c-torture/compile/20191015-1.c: New test.
	* gcc.c-torture/compile/20191015-2.c: New test.

2019-10-15  Martin Sebor  <msebor@redhat.com>

	PR testsuite/92016
	* gcc.dg/Wstringop-overflow-17.c: Expect an additional warning.

2019-10-15  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR target/92093