@@ -1,3 +1,8 @@
+2019-10-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/87752
+	* gfortran.dg/gomp/pr87752.f90: New test.
+
 2019-10-17  Richard Biener  <rguenther@suse.de>
 
 	PR debug/91887
